--- a/private_dot_config/starship.toml
+++ b/private_dot_config/starship.toml
@@ -19,10 +19,10 @@ $rust\
 $golang\
 $nodejs\
 $python\
-[](fg:color_blue bg:color_bg3)\
-$docker_context\
+[](fg:color_blue bg:color_green)\
 $conda\
-[](fg:color_bg3 bg:color_bg1)\
+[](fg:color_green bg:color_green)\
+$docker_context\
 [ ](fg:color_bg1)\
 )
 [](color_yellow)\
@@ -78,13 +78,6 @@ style_user = "bg:color_orange fg:color_fg0"
 style_root = "bg:color_orange fg:color_fg0"
 format = '[ $user ]($style)'
 
-[memory_usage]
-disabled = false
-threshold = -1
-format = '[[${ram} (${ram_pct}) ](fg:color_fg0 bg:color_orange)]($style)'
-symbol = '󰍛 '
-style = 'bg:color_orange'
-
 [shell]
 disabled = false
 format = '[[ $indicator ](fg:color_fg0 bg:color_orange)]($style)'
@@ -95,13 +88,25 @@ zsh_indicator = "zsh shell"
 powershell_indicator = "󰨊 shell"
 unknown_indicator = "? shell"
 
+[memory_usage]
+disabled = false
+threshold = -1
+format = '[[${ram} (${ram_pct}) ](fg:color_fg0 bg:color_orange)]($style)'
+symbol = '󰍛 '
+style = 'bg:color_orange'
+
+[time]
+disabled = false
+time_format = " %m/%d   %R"
+style = "bg:color_bg1"
+format = '[[$time ](fg:color_fg0 bg:color_orange)]($style)'
+
 
 [directory]
 style = "fg:color_fg0 bg:color_yellow"
 format = "[󰉓 : $path ]($style)"
 truncation_length = 3
 truncation_symbol = "…/"
-
 
 [directory.substitutions]
 "Documents" = "󰈙 "
@@ -138,23 +143,19 @@ format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
 [python]
 symbol = ""
 style = "bg:color_blue"
-format = '[[ $symbol( $version )($virtualenv) ](fg:color_fg0 bg:color_blue)]($style)'
+version_format = "v${major}.${minor}"  
+format = '[[ $symbol( $version )(env: $virtualenv) ](fg:color_fg0 bg:color_blue)]($style)'
 
 [docker_context]
 symbol = ""
 style = "bg:color_bg3"
-format = '[[ $symbol( $context) ](fg:#83a598 bg:color_bg3)]($style)'
+format = '[[ $symbol( $context) ](fg:color_fg0 bg:color_bg3)]($style)'
 
 [conda]
 symbol = "󱔎"
-style = "bg:color_bg3"
-format = '[[$symbol( $environment) ](fg:#83a598 bg:color_bg3)]($style)'
+style = "bg:color_green"
+format = '[[$symbol( $environment) ](fg:color_fg0 bg:color_green)]($style)'
 
-[time]
-disabled = false
-time_format = " %m/%d   %R"
-style = "bg:color_bg1"
-format = '[[$time ](fg:color_fg0 bg:color_orange)]($style)'
 
 [line_break]
 disabled = false
