--- a/private_dot_config/starship.toml
+++ b/private_dot_config/starship.toml
@@ -5,7 +5,7 @@ add_newline = false
 format = """
 [](color_orange)$os$username$shell$memory_usage$time[](fg:color_orange)\
 (
-[](color_aqua)$git_branch$git_status[](fg:color_aqua bg:color_blue)\
+[](color_aqua)$git_branch$git_commit$git_state$git_metrics[](fg:color_aqua bg:color_blue)\
 $c$rust$golang$nodejs$python$conda\
 [](fg:color_blue bg:color_bg1)\
 $docker_context\
@@ -16,19 +16,35 @@ $line_break\
 $character
 """
 
-palette = 'gruvbox_dark'
+palette = 'solarized_personalized'
 
-[palettes.gruvbox_dark]
-color_fg0 = '#fbf1c7'
-color_bg1 = '#3c3836'
-color_bg3 = '#665c54'
-color_blue = '#458588'
-color_aqua = '#689d6a'
-color_green = '#98971a'
-color_orange = '#d65d0e'
-color_purple = '#b16286'
-color_red = '#cc241d'
-color_yellow = '#d79921'
+[palettes.solarized]
+color_fg0    = '#fdf6e3'    # foreground for text/icons (Solarized base3)
+color_bg1    = '#073642'    # primary background behind status blocks (base02)
+color_bg3    = '#586e75'    # slightly lighter divider/background (base01)
+
+# Accent blocks — original Solarized hues
+color_blue   = '#268bd2'    # blue: informational highlights (e.g., branch)
+color_aqua   = '#2aa198'    # cyan: secondary info (e.g., shell or context)
+color_green  = '#859900'    # green: success/state OK indicators
+color_yellow = '#b58900'    # yellow: warnings or neutral counts
+color_orange = '#cb4b16'    # orange: less-severe alerts or diffs added
+color_red    = '#dc322f'    # red: errors/failures
+color_purple = '#6c71c4'    # violet: miscellaneous emphasis
+
+[palettes.solarized_personalized]  # I did this by desaturating the original Solarized colors by 0.35
+color_fg0    = '#fdf6e3'    # foreground for text/icons (Solarized base3)
+color_bg1    = '#073642'    # primary background behind status blocks (base02)
+color_bg3    = '#586e75'    # slightly lighter divider/background (base01)
+
+color_blue   = '#5183a7'    # blue: informational highlights (e.g., branch)
+color_aqua   = '#4e7d79'    # cyan: secondary info (e.g., shell or context)
+color_green  = '#717e1b'    # green: success/state OK indicators
+color_yellow = '#957820'    # yellow: warnings or neutral counts
+color_orange = '#a45c3d'    # orange: less-severe alerts or diffs added
+color_red    = '#b25b5a'    # red: errors/failures
+color_purple = '#6c71c4'    # violet: miscellaneous emphasis
+
 
 [os]
 disabled = false
@@ -106,9 +122,29 @@ symbol = ""
 style = "bg:color_aqua"
 format = '[[ $symbol $branch ](fg:color_fg0 bg:color_aqua)]($style)'
 
-[git_status]
+[git_commit]
+only_detached = true
+commit_hash_length = 4
+tag_disabled = false
+tag_symbol = " "  # nf-oct-git-compare (consistent with nerd font)
 style = "bg:color_aqua"
-format = '[[($all_status$ahead_behind )](fg:color_fg0 bg:color_aqua)]($style)'
+format = '[[ ($hash$tag) ](fg:color_fg0 bg:color_aqua)]($style)'
+
+[git_state]
+style = "bg:color_aqua"
+format = '[[ ($state $progress_current/$progress_total) ](fg:color_fg0 bg:color_aqua)]($style)'
+rebase = " REBASE"
+merge = " MERGE"
+revert = " REVERT"
+cherry_pick = " PICK"  # nf-mdi-source-branch-check
+bisect = " BISECT"
+am = " AM"
+am_or_rebase = " AM/REBASE"
+
+[git_metrics]
+disabled = false
+only_nonzero_diffs = true
+format = '[[ $added  $deleted ](fg:color_fg0 bg:color_aqua)]($style)'
 
 [nodejs]
 symbol = ""
@@ -139,7 +175,7 @@ format = '[[ $symbol( $context) ](fg:color_fg0 bg:color_bg3)]($style)'
 [conda]
 symbol = "🅒"
 style = "bg:color_blue"
-format = '[[$symbol:($environment) ](fg:color_fg0 bg:color_blue)]($style)'
+format = '[[$symbol :($environment)](fg:color_fg0 bg:color_blue)]($style)'
 
 
 [line_break]
